--- a/lab2/Backend/requirements.txt
+++ b/lab2/Backend/requirements.txt
@@ -1,3 +1,10 @@
 flask==2.2.5
 flask-cors==3.0.10
-pymysql==1.1.0pip
+pymysql==1.1.0
+Flask-Caching==1.11.1
+Flask-Limiter==3.12
+Flask-Talisman==1.0.0
+prometheus-flask-exporter==0.20.0
+python-decouple==3.8
+marshmallow==3.19.0
+config==0.5.1
